# adamduvick.github.io

./: .gitignore  404.html  CNAME  README.md  Texas Canasta.md  cleanup_filenames.py  docs_hooks.py  dynamics.js  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  style.css  temp.md  webpage.html
.devcontainer/: devcontainer.json
.obsidian/: app.json  community-plugins.json  hotkeys.json  workspace-mobile.json  workspace.json
.trash/: Pasta.md
bacon-'n'-pasta-parmesan/: index.html
baked-oatmeal/: index.html
basic-sourdough/: index.html
beer-bread/: index.html
best-barbecue-beef-brisket/: index.html
best-ground-beef-chili/: index.html
blueberries-'n'-cream/: index.html
breakfast-casserole/: index.html
broccoli-salad/: index.html
cantonese-style-black-pepper-beef/: index.html
cantonese-style-black-pepper-beef-with-potatoes/: index.html
carnitas/: index.html
carnitas-spice-mixture/: index.html
cheeseburger-soup/: index.html
cherry-almond-amish-sugar-cookies/: index.html
chicken-&-wild-rice-soup/: index.html
chicken-and-broccoli-braid/: index.html
chicken-and-wild-rice-soup/: index.html
chocolate-chip-cookies/: index.html
chocolate-chip-tea-cakes/: index.html
chocolate-doughnut-muffins/: index.html
chocolate-logs/: index.html
cinnamon-rolls/: index.html
cold-brew/: index.html
cracker-stuff/: index.html
cream-scones/: index.html
cuban-black-beans/: index.html
curried-tuna-salad-with-apples-and-currants/: index.html
curried-tuna-salad-with-apples-and-currents/: index.html
docs/: Cuban-black-beans.md  (+75 more)
(+157 files in other folders)
