[project]
name = "adamduvick-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mdx-truly-sane-lists>=1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.2",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-simple-hooks>=0.1.5",
]

[dependency-groups]
dev = ["pytest>=7.0"]
